COH-23047 Deprecated constructors of the form new <WrapperType>(<primitiveType>) in Java
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 85880]