@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2020, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2021, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
  * http://oss.oracle.com/licenses/upl.
@@ -59,10 +59,10 @@ public class PofHelperTypeConversionTest
         assertEquals(PofConstants.T_INT16,
                 PofHelper.getPofTypeId(Short.class, new SimplePofContext()));
         assertEquals(PofConstants.T_INT32, PofHelper.getPofTypeId(
-                new Integer(-1).getClass(), new SimplePofContext()));
+                Integer.valueOf(-1).getClass(), new SimplePofContext()));
         assertEquals(PofConstants.T_INT64,
                 PofHelper.getPofTypeId(
-                        new Long(Integer.MAX_VALUE).getClass(),
+                        Long.valueOf(Integer.MAX_VALUE).getClass(),
                         new SimplePofContext()));
         assertEquals(PofConstants.T_DATETIME,
                 PofHelper.getPofTypeId(
@@ -77,14 +77,13 @@ public class PofHelperTypeConversionTest
                 PofHelper.getPofTypeId(ad.getClass(),
                         new SimplePofContext()));
 
-        Object[] objArray = new Object[]{new Date(11, 11, 11),
-                new Integer(13), new Double(Double.NaN)};
+        Object[] objArray = new Object[]{new Date(11, 11, 11), 13, Double.NaN};
         assertEquals(PofConstants.T_ARRAY, PofHelper.getPofTypeId(
                 objArray.getClass(), new SimplePofContext()));
 
         List list = new ArrayList();
         list.add(new Date(11, 11, 11));
-        list.add(new Float(5.55));
+        list.add((float) 5.55);
         assertEquals(PofConstants.T_COLLECTION,
                 PofHelper.getPofTypeId(list.getClass(),
                         new SimplePofContext()));
@@ -110,22 +109,13 @@ public class PofHelperTypeConversionTest
     @Test
     public void testConvertNumber()
         {
-        assertEquals(null,
-                PofHelper.convertNumber(null, PofConstants.J_BYTE));
-        assertEquals(new Byte((byte) 111), PofHelper.convertNumber(
-                new Integer(111), PofConstants.J_BYTE));
-        assertEquals(new Short((short) 6), PofHelper.convertNumber(
-                new Float(6.0001), PofConstants.J_SHORT));
-        assertEquals(new Integer(11), PofHelper.convertNumber(
-                new Integer(11), PofConstants.J_INTEGER));
-        assertEquals(new Long(Long.MAX_VALUE),
-                PofHelper.convertNumber(new Long(Long.MAX_VALUE),
-                        PofConstants.J_LONG));
-        assertEquals(new Double(Long.MAX_VALUE),
-                PofHelper.convertNumber(new Long(Long.MAX_VALUE),
-                        PofConstants.J_DOUBLE));
-        assertEquals(new Float(-0.1), PofHelper.convertNumber(
-                new Double(-0.1), PofConstants.J_FLOAT));
+        assertEquals(null, PofHelper.convertNumber(null, PofConstants.J_BYTE));
+        assertEquals((byte) 111, PofHelper.convertNumber(111, PofConstants.J_BYTE));
+        assertEquals((short) 6, PofHelper.convertNumber((float) 6.0001, PofConstants.J_SHORT));
+        assertEquals(11, PofHelper.convertNumber(11, PofConstants.J_INTEGER));
+        assertEquals(Long.MAX_VALUE, PofHelper.convertNumber(Long.MAX_VALUE, PofConstants.J_LONG));
+        assertEquals((double) Long.MAX_VALUE, PofHelper.convertNumber(Long.MAX_VALUE, PofConstants.J_DOUBLE));
+        assertEquals((float) -0.1, PofHelper.convertNumber(-0.1, PofConstants.J_FLOAT));
         }
 
     @Test
@@ -133,7 +123,7 @@ public class PofHelperTypeConversionTest
         {
         try
             {
-            PofHelper.convertNumber(new Integer(1), 100);
+            PofHelper.convertNumber(1, 100);
             fail("expected exception");
             }
         catch (IllegalArgumentException e)
@@ -145,8 +135,7 @@ public class PofHelperTypeConversionTest
     @Test
     public void testResizeArray()
         {
-        Object[] ao = new Object[]{new Date(1999, 1, 1, 12, 0, 0),
-                new Long(Long.MAX_VALUE), new Float(-0.1)};
+        Object[] ao = new Object[]{new Date(1999, 1, 1, 12, 0, 0), Long.MAX_VALUE, (float) -0.1};
         assertEquals(ao.length + 10, PofHelper
                 .resizeArray(ao, ao.length + 10).length);
         assertEquals(ao.length,
