@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2020, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2021, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
  * http://oss.oracle.com/licenses/upl.
@@ -425,7 +425,7 @@ public class PersistenceTestHelper
             {
             for (int i = 0; i < cMax; i++)
                 {
-                publisher.send(new Integer(i));
+                publisher.send(i);
                 }
             publisher.flush().join();
             }
@@ -451,7 +451,7 @@ public class PersistenceTestHelper
             for (int i = 0; i < cMax; i++)
                 {
                 Element<Integer> e = countSubscriber.receive().get();
-                assertEquals(new Integer(i), e.getValue());
+                assertEquals(Integer.valueOf(i), e.getValue());
                 }
             }
         }
